Gestione oggetto ConfigurationManager per gestire parametri memorizzati in appsetings.json; gestione secret key, nome db sqlite e expiration minutes

--- a/WebAPIAuthJWT/WebAPIAuthJWT/appsettings.json
+++ b/WebAPIAuthJWT/WebAPIAuthJWT/appsettings.json
@@ -1,6 +1,8 @@
 {
   "AppSettings": {
-    "Secret": "dVQ!VdB6iEvu23^Onyp$a480"
+    "Secret": "dVQ!VdB6iEvu23^Onyp$a480",
+    "ExpirationMinute": 20,
+    "DB_SQLite": "DB\\Tornei.db"
   },
   "Logging": {
     "LogLevel": {
